@@ -226,6 +226,8 @@ $Id: build.xml,v 1.46 2009/10/23 19:57:58 rk903 Exp $
 			<fileset dir="src/server/edu/harvard/i2b2/crc/delegate/pdo">
 				<include name="pdo_template.xml"/>
 			</fileset>
+			<zipfileset dir="src/server/edu/harvard/i2b2/crc/delegate/pdo" prefix="edu/harvard/i2b2/crc/delegate/pdo" includes="pdo_template.xml" />
+
 			<!-- end -->
 			<zipfileset dir="src/server/edu/harvard/i2b2/crc/axis2/META-INF" prefix="META-INF" includes="services.xml" />
 			<zipfileset dir="../${i2b2CommonProject}/dist/" prefix="lib" includes="*.jar" />
@@ -325,14 +327,17 @@ $Id: build.xml,v 1.46 2009/10/23 19:57:58 rk903 Exp $
 	<target name="test" depends="compile" description="Compile and run JUnit tests and testcases">
 		<echo message="${Name}: Running test cases!" />
 		<property name="reports.dir" value="${report}" />
+
 		<!-- run the unit tests -->
-		<junit fork="yes" haltonfailure="no" maxmemory="512M" printsummary="on" errorProperty="test.failed" failureProperty="test.failed" showoutput="true">
+		<junit fork="yes" haltonfailure="no" maxmemory="2048M" printsummary="on" errorProperty="test.failed" failureProperty="test.failed" showoutput="false">
 			<formatter type="xml" />
 			<jvmarg value="-Dtestfiledir=${testfiledir}" />
+			<jvmarg value="-Dtesthost=${testhost}" />
+			<jvmarg value="-Djava.endorsed.dirs=endorsed_lib" />
 			<!--<test name="AllTests" todir="${report.dir}"/>-->
 			<batchtest fork="yes" todir="${reports.dir}">
 				<fileset dir="${src}/test">
-					<include name="**/PdoQueryTest.java" />
+					<include name="**/SetfinderQueryTest.java" /> 
 					<exclude name="**/AllTests.java" />
 				</fileset>
 			</batchtest>
